--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: "Karla", sans-serif;
+  height: 100vh;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+.App {
+  margin: 200px auto;
+  max-width: 600px;
+  position: relative;
+  height: 500px;
+  background-color: #0b2434;
+}
+.container {
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 80%;
+  background-color: #f5f5f5;
+  display: grid;
+  grid-template: 50px 70px 1fr 1fr 1fr / repeat(5, 1fr);
+  padding: 20px;
+  border-radius: 5px;
+}
+.numbers {
+  grid-row: 3/5;
+  grid-column: 1/-1;
+  text-align: center;
+
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  margin: 1em auto;
+  height: 40px;
+  display: flex;
+  font-size: 1.4em;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  width: 40px;
+  background-color: #ffffff;
+  font-family: "Karla", sans-serif;
+  cursor: pointer;
+}
+.title {
+  grid-row: 1/2;
+  grid-column: 1/-1;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.explain {
+  grid-row: 2/3;
+  grid-column: 1/-1;
+  text-align: center;
+}
+button {
+  grid-row: 5/6;
+  grid-column: 1/-1;
+  width: 140px;
+  height: 40px;
+  padding: 1em;
+  font-size: 1.2rem;
+  font-family: "Karla", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1em auto;
+  color: white;
+  border: none;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #5035ff;
 }
